--- a/nextUcodBaseJuego/index.html
+++ b/nextUcodBaseJuego/index.html
@@ -15,7 +15,7 @@
 
     <div class="panel-tablero">
       <div class="col-1">
-        
+
       </div>
       <div class="col-2">
 
@@ -38,6 +38,8 @@
     </div>
 
     <div class="panel-score">
+      <div class="final-juego">
+      </div>
       <div class="score">
         <h2 class="data-titulo">Puntuación</h2>
         <span class="data-info" id="score-text">0</span>
@@ -48,22 +50,21 @@
       </div>
       <div class="time">
         <h2 class="data-titulo">Tiempo</h2>
-        <div class="data-info" id="timer">02:00</div>
+        <div class="data-info" id="timer">2:00</div>
+
       </div>
       <div class="buttons">
         <button class="btn-reinicio">Iniciar</button>
       </div>
     </div>
 
+
   </div>
-
-
-
-
-
   <script src="js/jquery-3.0.0.js" type="text/javascript"></script>
   <script type="text/javascript" src="js/jquery-ui.min.js"></script>
   <script src="js/timer.js" type="text/javascript"></script>
   <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/timer.js"></script>
+  <script type="text/javascript" src="js/jquery.countdown.js"></script>
 </body>
 </html>
